Fix keyword spacing and commas

--- a/frontend/src/styles/datasheetPage.module.scss
+++ b/frontend/src/styles/datasheetPage.module.scss
@@ -128,6 +128,10 @@
       width: 65%;
       height: 100%;
       padding-left: 20px;
+
+      .keyword {
+        margin-right: 4px;
+      }
     }
     .factionKeywordsWrapper {
       box-sizing: border-box;
